k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-client
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5

  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: eureka-server
          imagePullPolicy: Never
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-service
  template:
    metadata:
      labels:
        app: doctor-service
    spec:
      containers:
        - name: doctor-service
          image: doctor-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  selector:
    app: doctor-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: appointment-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
        - name: admin-service
          image: admin-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin-service
  ports:
    - port: 8088
      targetPort: 8088
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aisymptom-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aisymptom-service
  template:
    metadata:
      labels:
        app: aisymptom-service
    spec:
      containers:
        - name: aisymptom-service
          image: aisymptom-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8098
---
apiVersion: v1
kind: Service
metadata:
  name: aisymptom-service
spec:
  selector:
    app: aisymptom-service
  ports:
    - port: 8098
      targetPort: 8098
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: api-gateway
          imagePullPolicy: Never
          ports:
            - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8089
      targetPort: 8089
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemedicine-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemedicine-service
  template:
    metadata:
      labels:
        app: telemedicine-service
    spec:
      containers:
        - name: telemedicine-service
          image: telemedicine-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: telemedicine-service
spec:
  selector:
    app: telemedicine-service
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: patient-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: patient-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: payment-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8095
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - port: 8095
      targetPort: 8095
  type: ClusterIP
